2005-04-26 François Proulx <francois.proulx@gmail.com>
	* stylesheet rework
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Fixed wrong location for change password link
2005-04-25 François Proulx <francois.proulx@gmail.com>
	* Portal page styling
	
2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroup.php:  Previous fix didn't work.  New fix.

2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroup.php:  Make bad selection mode eror non-fatal.
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix bug in ContentGroup enumeration

2005-04-25 François Proulx <francois.proulx@gmail.com>
	* More stylesheets work
	
2005-04-25 François Proulx <francois.proulx@gmail.com>
	* Much better stylesheet
		
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* UI fully functionnal

2005-04-25 François Proulx <francois.proulx@gmail.com
	* More interface work
2005-04-25 François Proulx <francois.proulx@gmail.com
	* Completed integration of new interface with new objects
	
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Integration merge, should work, but there will be display problems everywhere.  Expect further commits today.
	* Almost 100% complete Network abstraction
	* Much better object encapsulation.  Deprecated methods not removed yet.
	* Add MainUI class.  Used to display the interface.  Inner workings still need work.
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Added Preferred Size support for Flickr pictures
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Completed missing translations
	
2005-04-23 François Proulx <francois.proulx@gmail.com>
	* Fixed bugs in File and EmbeddedContent
	* Completed first iteration of EmbeddedContent
	* Can now play multimedia content
	* Could not test fallback with my browser ( Safari and Firefox )
	* Need help to test content in different browser to see how it reacts...
	
2005-04-22 François Proulx <francois.proulx@gmail.com>
	* Fixed bug in FlickrPhotostream.php