@@ -449,8 +449,34 @@ class Content implements GenericObject
         }
 
 		$html .= "</div>\n";
+		$this->logContentDisplay();
 		return $html;
 	}
+
+/** Log that this content has just been displayed to the user.  Will only log if the user is logged in */
+private function logContentDisplay()
+{
+$user = User::getCurrentUser();
+$node = Node::getCurrentNode();
+if($user!=null&&$node !=null)
+{
+	$user_id = $user->getId();
+	$node_id = $node->getId();
+		global $db;
+
+		$sql = "SELECT * FROM content_display_log WHERE user_id='$user_id' AND node_id='$node_id' AND content_id='$this->id'";
+		$db->ExecSql($sql, $log_rows, false);
+		if($log_rows!=null)
+		{
+		$sql = "UPDATE content_display_log SET last_display_timestamp = NOW() WHERE user_id='$user_id' AND content_id='$this->id' AND node_id='$node_id'";
+		}
+		else
+		{
+		$sql = "INSERT INTO content_display_log (user_id, content_id, node_id) VALUES ('$user_id', '$this->id', '$node_id')";
+		}
+		$db->ExecSqlUpdate($sql, false);
+}
+}
 
 	/** Retreives the list interface of this object.  Anything that overrides this method should call the parent method with it's output at the END of processing.
 	 * @param $subclass_admin_interface Html content of the interface element of a children
